# bonus-prize

./: .gitignore  Cargo.toml  README.md  draw_result.json  start_validator.sh
programs/bonus_prize/: Cargo.toml
programs/bonus_prize/src/: instruction.rs  lib.rs  processor.rs
programs/bonus_prize/src/utils/: pdas.rs
programs/bonus_prize/tests/: functional.rs  setup.rs
sdk/: package.json  tsconfig.json
sdk/accountSetup/: newDrawResult.json  rewriteWinner.ts
sdk/src/: constants.ts  index.ts
sdk/test/: test.ts
src/: entrypoint.rs  error.rs  instruction.rs  instructions.rs  lib.rs  nll_state.rs  processor.rs  state.rs
src/utils/: assertions.rs  constants.rs  mod.rs  mpl-assertions.rs  pdas.rs
tests/: functional.rs  setup.rs
