[package]
name = "bonus-prize"
version = "1.0.0"
description = "No loss lottery bonus prize extension"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = { version = "1.5.1" }
borsh-derive = "1.5.1"
solana-program = "2.0.0"
thiserror = "1.0.63"
num-traits = "0.2.19"
spl-token = { version = "6.0.0",  features = ["no-entrypoint"]}
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "2.0.0"
solana-sdk = "2.0.0"
termcolor = "=1.4.0"
base64 = "0.22.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
